k8s/server-deployment.yaml
apiVersion: apps/v1
#The kind of k8s object
kind: Deployment
#Cluster identification
metadata:
  name: server-deployment
spec:
  # The number of pod intances replicas
  replicas: 3
  selector:
    # Match the pod template here with template->metadata->labels->component
    matchLabels:
      component: server
   #The pod template. It defines the pod that the deployment has to run.
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: cygnetops/multi-server-pgfix-5-11
          ports:
            - containerPort: 5000
