k8s/client-cluster-ip-service.yaml
apiVersion: v1
# SERVICE IS A CK8S COMPONENT THAT PROVEDE A SRERVICE NETWORK
kind: Service
metadata: 
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3050
      targetPort: 3000
